# OSLab3

./: CMakeLists.txt  README.md  comunication.h  globals.cpp  globals.h  main.cpp  maker.cpp  maker.h
